--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -48,7 +48,7 @@ jobs:
           
       - name: Update package file
         run: |
-          echo "// swift-tools-version: 5.7" >> Package.swift
+          echo "// swift-tools-version: 5.7" > Package.swift
           echo "" >> Package.swift
           echo "import PackageDescription" >> Package.swift
           echo "" >> Package.swift
